7841 - fixed instantiation of reference data